			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.swi.psy.uva.nl/bugzilla/
					--------------------------------------

  * FIXED: Redesign of frames for foreign-term handling (FliFrame), fixing
    problems with the garbage collector in some situations.  The new design
    is easier to understand and debug.

  * FIXED: Bug#85: Prolog arithmetic functions in optimised mode evaluating
    complex not-compiled expressions.

  * PORT: make sure the profiler-support autoconf test runs at least 1 sec.
    This makes the test work regardless of the speed of the machine.

  * FIXED: profiler/2 and '$prof_procedure_data'/7 to deal with sibling
    ticks accounting.  Direct use of profile/1 was ok.  Also fixed getting
    details from predicates in the user module.  David Reitter.


VERSION 5.2.5 (Aug 01, 2003)
============================

  * FIXED: Bug#81 memory leak issues around recursive mutex creation.  Also
    provide faster initialisation of recursive mutex objects.  Thanks to
    Ross Johnson (pthread-win32 maintainer).

  * ADDED: Option SIO_NOMUTEX to make faster temporary streams that are
    not shared between threads.  Provides a work-around for Bug#81 causes
    my a memory leak in pthread-win32.  Mike Elston.

  * PORT: Bug#83 Added dummy foreign profiler interface on systems that
    do not support the profiler.  This causes problems on Solaris 2.8
    for compiling XPCE as the profiler was not detected correctly.
    Lourens van der Meij.

  * FIXED: configure for profiler on systems with non-BSD signal semantics
    (e.g. Solaris).  With help from Lourens van der Meij.

  * FIXED: Error handling complex meta-calls in the stack-shifter (only
    affects operating systems that have nothing better than malloc() for
    allocating the Prolog stacks).
